fixed a bug on firefox mobile : "home" hidden (collapsed) dropdown menu was hovering over "partners" dropdown title, making it non clickable => Enforcing z-indexes to workaround this issue

--- a/app/styles/_bootstrap-overrides.scss
+++ b/app/styles/_bootstrap-overrides.scss
@@ -136,3 +136,10 @@ span.visible-xs {
   transition: all 0.2s linear;
   -webkit-transition: all 0.2s linear;
 }
+
+.navbar-nav .open .dropdown-menu {
+  z-index: 1000;
+}
+.navbar-nav .dropdown-menu {
+  z-index: 0;
+}
